oniro-template: Use PlusJakartaSans fonts
Signed-off-by: Philippe Coval <philippe.coval@huawei.com>
Change-Id: I92380d2516e98bfa0d874cb16b7c5c327ffcfa40

--- a/docs/oniro-template/local.css
+++ b/docs/oniro-template/local.css
@@ -35,3 +35,16 @@ body {
   color: #feed4c;
 }
 
+@font-face {
+    font-family: PlusJakartaSans;
+    src: url(static/fonts/PlusJakartaSans-Regular.woff2);
+}
+.reveal,
+.reveal h1,
+.reveal h2,
+.reveal h3,
+.reveal h4,
+.reveal h5,
+.reveal h6 {
+    font-family: PlusJakartaSans
+}
